# PSAR-Align

./: Makefile  PSARAlign.pl  README  README.psar  compute_probs.pl  model.cpp  model.h  params.cpp  params.h  psar.cpp  psar.mk  scores.cpp  scores.h  sequence.cpp  sequence.h
example/: parameters.txt  test.fa
fsa-1.15.6/: Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  version.m4
fsa-1.15.6/MW/: Makefile.in  acinclude.m4  configure  configure.in
fsa-1.15.6/MW/src/: MW.h  MWDriver.C  MWDriver.h  MWStats.C  MWTask.C  MWTask.h  MWWorker.h
fsa-1.15.6/MW/src/RMComm/: MWRMComm.h
fsa-1.15.6/MW/src/RMComm/MW-Socket/: MWSocketRC.C  MWSocketRC.h
fsa-1.15.6/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
fsa-1.15.6/doc/: Makefile  Makefile.am  Makefile.in
fsa-1.15.6/examples/: Makefile  Makefile.am  Makefile.in  README  RV12.BBS12030.fasta  RV12.BBS12030.fasta.gui  RV12.BBS12030.fasta.probs  RV12.BBS12030.mfa  RV12.BBS12030.reference.mfa  RV12.BBS12030.reference.stock  RV12.BBS12030.stock  U5.aln1.fasta  U5.aln1.fasta.gui  U5.aln1.fasta.probs  U5.aln1.mfa  U5.aln1.reference.mfa  U5.aln1.reference.stock  U5.aln1.stock  tRNA.aln1.fasta  tRNA.aln1.fasta.gui  tRNA.aln1.fasta.probs  tRNA.aln1.mfa  tRNA.aln1.reference.mfa  tRNA.aln1.reference.stock  tRNA.aln1.stock
fsa-1.15.6/html/: FAQ.html  Makefile  Makefile.am  Makefile.in  pretty.css
fsa-1.15.6/perl/: GFF.pm  Makefile  Makefile.am  Makefile.in  Stockholm.pm  accuracy.pl  cmpalign.pl  dartlog.pl  prettify.pl  seqdotplot.pl
fsa-1.15.6/perl/FSA/: Model.pm  SparseMatrices.pm
fsa-1.15.6/perl/GFF/: Database.pm
fsa-1.15.6/perl/Stockholm/: Database.pm
fsa-1.15.6/src/annealing/: Makefile  Makefile.am  Makefile.in  SparseMatrix.h  alignment_DAG.cc  alignment_DAG.h  dotplot.cc  dotplot.h  tree_weights.cc  tree_weights.h
fsa-1.15.6/src/annealing/.deps/: alignment_DAG.Po  dotplot.Po  tree_weights.Po
fsa-1.15.6/src/fsa/: Makefile  Makefile.am  Makefile.in  algebras.h  aminoacid_indel2dp.cc  aminoacid_indel2dp.h  aminoaciddp.cc  aminoaciddp.h  anchors.cc  anchors.h  constraints.cc  constraints.h  fsa.cc  fsa.h  model.cc  model.h  mybanding.h  nucleotide_indel2dp.cc  nucleotide_indel2dp.h  nucleotidedp.cc  nucleotidedp.h  sequence_pair_selector.cc  sequence_pair_selector.h
fsa-1.15.6/src/fsa/.deps/: algebras.Po  aminoacid_indel2dp.Po  aminoaciddp.Po  anchors.Po  constraints.Po  fsa.Po  model.Po  nucleotide_indel2dp.Po  nucleotidedp.Po  sequence_pair_selector.Po
fsa-1.15.6/src/main/: Makefile  Makefile.am  Makefile.in  gapcleaner.cc  isect_mercator_alignment_gff.cc  main.cc  map_coords.cc  map_gff_coords.cc  percentid.cc  prot2codon.cc  slice_fasta.cc  slice_fasta_gff.cc  slice_mercator_alignment.cc  translate.cc
fsa-1.15.6/src/main/.deps/: gapcleaner.Po  isect_mercator_alignment_gff.Po  main.Po  map_coords.Po  map_gff_coords.Po  percentid.Po  prot2codon.Po  slice_fasta.Po  slice_fasta_gff.Po  slice_mercator_alignment.Po  translate.Po
fsa-1.15.6/src/manager/: Makefile  Makefile.am  Makefile.in  db_adapter.cc  db_adapter.h  db_misc.cc  db_misc.h  db_postgres.cc  db_postgres.h  manager.cc  manager.h  mw_adapter.cc  mw_adapter.h  mw_master.cc  mw_master.h  mw_task.cc  mw_task.h  mw_worker.cc  mw_worker.h  transfer_data.cc
fsa-1.15.6/src/manager/.deps/: db_adapter.Po  db_misc.Po  manager.Po  mw_adapter.Po
fsa-1.15.6/src/math/: Makefile  Makefile.am  Makefile.in  mathematics.cc  mathematics.h  mst.cc  mst.h
fsa-1.15.6/src/math/.deps/: mathematics.Po  mst.Po
fsa-1.15.6/src/seq/: Makefile  Makefile.am  Makefile.in  alignment.cc  alignment.h  alphabet.cc  alphabet.h  gff.cc  gff.h  interval.h  mercator.cc  mercator.h  sequence.cc  sequence.h  similarity_matrix.cc  similarity_matrix.h
fsa-1.15.6/src/seq/.deps/: alignment.Po  alphabet.Po  gff.Po  mercator.Po  sequence.Po  similarity_matrix.Po
fsa-1.15.6/src/util/: Makefile  Makefile.am  Makefile.in  array2d.h  dexception.cc  dexception.h  hash_fcn.h  logfile.cc  logfile.h  logtags.h  macros.h  memcheck.cc  memcheck.h  misc.cc  misc.h  opts_list.cc  opts_list.h  regexp.cc  sstring.cc  sstring.h
fsa-1.15.6/src/util/.deps/: dexception.Po  logfile.Po  memcheck.Po  misc.Po  opts_list.Po  regexp.Po  sstring.Po
fsa-1.15.6/tests/: Makefile  Makefile.am  Makefile.in
