EXTRA_DIST = \
	README \
	RV12.BBS12030.fasta \
	RV12.BBS12030.fasta.gui \
	RV12.BBS12030.fasta.probs \
	RV12.BBS12030.mfa \
	RV12.BBS12030.reference.mfa \
	RV12.BBS12030.reference.stock \
	RV12.BBS12030.stock \
	U5.aln1.fasta \
	U5.aln1.fasta.gui \
	U5.aln1.fasta.probs \
	U5.aln1.mfa \
	U5.aln1.reference.mfa \
	U5.aln1.reference.stock \
	U5.aln1.stock \
	tRNA.aln1.fasta \
	tRNA.aln1.fasta.gui \
	tRNA.aln1.fasta.probs \
	tRNA.aln1.mfa \
	tRNA.aln1.reference.mfa \
	tRNA.aln1.reference.stock \
	tRNA.aln1.stock
