AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libutil.a
libutil_a_SOURCES = \
	dexception.cc \
	logfile.cc \
	memcheck.cc \
	misc.cc \
	opts_list.cc \
	regexp.cc \
	sstring.cc

noinst_HEADERS = \
	array2d.h \
	dexception.h \
	hash_fcn.h \
	logfile.h \
	logtags.h \
	macros.h \
	memcheck.h \
	misc.h \
	opts_list.h \
	regexp.h \
	sstring.h
